# SwedishProject

./: .gitignore  mapping.cabal
doc/: Adv.txt  MappingHard.txt  MappingProblemList.txt  MappingText.txt  NP.txt  SweParsers.txt  TalbankenErrors.txt  agenda2.txt  deptypes.txt  embeddedClauses.gf  grammar9Nov.txt  grammarNotes.txt  grammarRel.txt  grammarvp.txt  lnsc.bst  loggbok.txt  meeting2Elisabet.txt  meeting2GroupNotes.txt  meeting2agenda.txt  meetingNotes.txt  oppose.txt  plan-2.txt  plan.txt  planMarch.txt  planSpring.txt  planWeek10.txt  planWeek41.txt  planWeek43.txt  planWeek44.txt  planWeek45.txt  planWeek46.txt  planWeek47.txt  planWeek48.txt  planWeek49.txt  planWeek50.txt  saldoNotes.txt  testFile.xml  testsuiteNotes.txt  todo.txt  unparsed.txt  (+1 more)
gf/: Big.gf  BigNew.gf  BigNew.gfo  BigNewSwe.gf  BigNewSwe.gfo  BigParse.gf  BigParseSwe.gf  BigSwe.gf  BigTest.gf  BigTest.gfo  BigTest.pgf  BigTestSwe.gf  BigTestSwe.gfo  BigValLexAbs.gf  DictSwe.gf  DictSweAbs.gf  DictSweAbs.gfo  ExtraSwe.gf  ExtraSwe.gfo  ExtraSweAbs.gf  ExtraSweAbs.gfo  GuessSwe.gf  GuessSwe.gfo  LexiconExt.gf  LexiconExt.gfo  LexiconExtSwe.gf  LexiconExtSwe.gfo  LexiconVerb.gf  LexiconVerbSwe.gf  Parse.hs  SaldoTot.gf  SmallerDictAbs.gf  Test.gf  Test.pgf  TestDan.gf  TestDanAbs.gf  TestNor.gf  TestNorAbs.gf  TestSwe.gf  ValLex.gf  (+4 more)
guessing/: Color.hs  CreateVerbList.hs  MkTables.hs  TestGuesser.hs  (+4 more)
webpage/: Log.hs  Main.hs  MainE.hs  MkLex.hs  ParseLex.hs  ReadCommand.hs  webpage.cabal
webpage/static/: explanation.html  first.htm  index.html  mores.htm  scripts.js  second.htm  styles.css
(+400 files in other folders)
